fixed stocktake list-view items

--- a/client/views/app/stocktake/list-view/list-view-items/list/master-list.html
+++ b/client/views/app/stocktake/list-view/list-view-items/list/master-list.html
@@ -11,10 +11,10 @@
               <th>Action</th>
             </tr>
             </thead>
-            {{#if state$listOfDates}}
+            {{#if listOfDates}}
               <tbody>
-              {{#each state$listOfDates}}
-                {{> render component='stocktakeItem' item=this}}
+              {{#each listOfDates}}
+                {{> stocktakeItem this}}
               {{/each}}
               </tbody>
             {{else}}
