--- a/client/views/app/stocktake/list-view/list-view.html
+++ b/client/views/app/stocktake/list-view/list-view.html
@@ -4,7 +4,7 @@
 
   <div class="wrapper wrapper-content animated">
     <div class="row">
-      {{> render component='stockTakeMasterList'}}
+      {{> stockTakeMasterList}}
     </div>
   </div>
 </template>
