Ported text area component

--- a/client/lib/components/comments/submit_comment/view.html
+++ b/client/lib/components/comments/submit_comment/view.html
@@ -2,7 +2,7 @@
   <div class="col-md-12 m-t-md m-b-md">
     <div class="chat-message-form">
       <div class="form-group">
-        {{> render component="textArea" placeholder="Enter Comment..." type="submitComment" referenceId=state$doc.referenceId refType=state$doc.refType}}
+        {{> textArea placeholder="Enter Comment..." type="submitComment" referenceId=state$doc.referenceId refType=state$doc.refType}}
       </div>
     </div>
   </div>
