--- a/client/views/app/dashboard/news-feed/post/post.html
+++ b/client/views/app/dashboard/news-feed/post/post.html
@@ -28,7 +28,7 @@
           </a>
 
           <div class="media-body">
-            {{> render component="textArea" placeholder="Write comment..." type="newsFeedSubTextBox" referenceId=_id}}
+            {{> textArea placeholder="Write comment..." type="newsFeedSubTextBox" referenceId=_id}}
           </div>
         </div>
       </div>
