Move style into appropriate folders

--- a/client/views/app/common/text_area/text-area.html
+++ b/client/views/app/common/text_area/text-area.html
@@ -1,11 +1,9 @@
 <template name="textArea">
-  {{#textareaAutocomplete settings=settings name="message" class="form-control message-input" placeholder=placeholder}}
-  {{/textareaAutocomplete}}
+  {{#textareaAutocomplete settings=settings name="message" class="form-control message-area" placeholder=placeholder}}{{/textareaAutocomplete}}
   <button class="btn btn-sm btn-primary pull-right submit-comment-button">
     {{buttonCaption}}
   </button>
 </template>
-
 
 <!--
   Below templates usages:
