--- a/client/views/app/dashboard/news-feed/post/post-comment/post-comment.html
+++ b/client/views/app/dashboard/news-feed/post/post-comment/post-comment.html
@@ -10,8 +10,11 @@
           {{username createdBy}}&nbsp;&nbsp;
         </a>
 
-        {{{text}}}
       </span>
+
+      <div>
+        {{{text}}}
+      </div>
       {{> newsFeedLikeButton}} -
       <small class="text-muted">{{timeFormattedWithDate createdOn}}</small>
     </div>
