--- a/client/views/app/navigations/navigation.less
+++ b/client/views/app/navigations/navigation.less
@@ -1,4 +1,4 @@
-@import "../theme-globals.import.less";
+@import "../../../stylesheets/theme-globals.import.less";
 
 #wrapper {
   &.force-show-sidebar {
