--- a/client/views/app/notifications/notifications.less
+++ b/client/views/app/notifications/notifications.less
@@ -1,4 +1,4 @@
-@import "../theme-globals.import.less";
+@import "../../../stylesheets/theme-globals.import.less";
 
 .mark-as-read {
   display: inline-block;
