--- a/client/views/app/common/ghost-editable/ghost-editable.less
+++ b/client/views/app/common/ghost-editable/ghost-editable.less
@@ -1,4 +1,4 @@
-@import '../theme-globals.import.less';
+@import '../../../../stylesheets/theme-globals.import.less';
 
 .ghost-editable-component {
   display: inline-block;
