--- a/client/views/app/organizations/area-settings/add-user-popup/add-user-popup.less
+++ b/client/views/app/organizations/area-settings/add-user-popup/add-user-popup.less
@@ -1,4 +1,4 @@
-@import "../theme-globals.import.less";
+@import "../../../../../stylesheets/theme-globals.import.less";
 
 .add-user-popup {
   .add-user-to-area-form {
