--- a/client/views/app/organizations/common/edit-location-form/edit-location-form.less
+++ b/client/views/app/organizations/common/edit-location-form/edit-location-form.less
@@ -1,4 +1,4 @@
-@import "../theme-globals.import.less";
+@import "../../../../../stylesheets/theme-globals.import.less";
 
 .edit-location-form-component,
 .edit-area-form-component {
