--- a/client/views/app/dashboard/news-feed/post/post.html
+++ b/client/views/app/dashboard/news-feed/post/post.html
@@ -1,5 +1,5 @@
 <template name="newsFeedPost">
-  <div class="social-feed-box">
+  <div class="social-feed-box post-element">
     <div class="social-avatar">
       <a class="pull-left" href="#">
         <img src="{{profilePicture createdBy}}" alt="image">
