--- a/client/views/app/dashboard/news-feed/post/like-button/like-button.html
+++ b/client/views/app/dashboard/news-feed/post/like-button/like-button.html
@@ -1,6 +1,6 @@
 <template name="newsFeedLikeButton">
-  <a href="#" class="small thumbsup-like pull-left like-post">
+  <small class="small thumbsup-like pull-left like-post">
     <i class="fa fa-thumbs-up"></i>
     {{likesCounterText}}
-  </a>
+  </small>
 </template>
