Fixed newsfeeds comments

--- a/client/views/app/dashboard/news-feed/news-feed.html
+++ b/client/views/app/dashboard/news-feed/news-feed.html
@@ -3,7 +3,7 @@
     <div class="feed-element">
       <div class="chat-message-form">
         <div class="form-group">
-          {{> textArea placeholder="Share something. Use @ to mention individuals." type="newsFeedMainTextBox" referenceId=""}}
+          {{> textArea placeholder="Share something. Use @ to mention individuals." type="newsFeedMainTextBox" reference=""}}
         </div>
       </div>
     </div>
