--- a/client/views/app/stocktake/counting-view/counting-view-items/list/areas/area-filters/area-box/area-box.html
+++ b/client/views/app/stocktake/counting-view/counting-view-items/list/areas/area-filters/area-box/area-box.html
@@ -2,11 +2,10 @@
   <div class="areaBox" data-id="{{item._id}}">
     {{#if editable}}
       <div class="box-wrapper pull-right" style="display: none;">
-        <span class="box-remove glyphicon glyphicon-remove removeArea" data-id="{{item._id}}"
-              data-type="{{item.type}}" style="margin: 2px"></span>
+        <span class="box-remove glyphicon glyphicon-remove removeArea" style="margin: 2px"></span>
       </div>
     {{/if}}
-    <a class="btn btn-block {{#if activeG item._id}} btn-info {{/if}} {{#if activeS item._id}} btn-info {{/if}} {{#if inActive item._id}} btn-default {{/if}} btn-sm {{item.class}} m-b-sm"
+    <a class="btn btn-block {{#if activeGeneralArea item._id}} btn-info {{/if}} {{#if activeSpecialArea item._id}} btn-info {{/if}} {{#if inActiveArea item._id}} btn-default {{/if}} btn-sm {{item.class}} m-b-sm"
        role="button"
        data-toggle="collapse" href="#{{item._id}}"
        aria-expanded="false" aria-controls="{{item._id}}">
