Ported comments panel

--- a/client/lib/components/job-items/detail/view.html
+++ b/client/lib/components/job-items/detail/view.html
@@ -181,7 +181,7 @@
 
         </div>
         <div class="row m-t-lg">
-          {{> render component='commentsPanel' id=state$job._id type='job'}}
+          {{> commentsPanel id=state$job._id type='job'}}
         </div>
       </div>
     </div>
