--- a/client/lib/components/menu-items/detail/view.html
+++ b/client/lib/components/menu-items/detail/view.html
@@ -56,7 +56,7 @@
         {{/if}}
       </div>
       {{> render component='menuDetailWidgets' item=state$menu}}
-      {{> render component='commentsPanel' id=state$menu._id type='menu'}}
+      {{> commentsPanel id=state$menu._id type='menu'}}
     </div>
   </div>
 
