--- a/client/lib/components/stocktake/ordering/list/view.html
+++ b/client/lib/components/stocktake/ordering/list/view.html
@@ -40,7 +40,7 @@
     </div>
   </div>
 
-  {{> render component='commentsPanel' id=state$version type='stockOrders'}}
+  {{> commentsPanel id=state$version type='stockOrders'}}
 
   <!-- COMPOSE MAIL MODAL-->
   <div class="modal fade" id="composeMailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
