--- a/client/lib/components/suppliers/profile/profile/view.html
+++ b/client/lib/components/suppliers/profile/profile/view.html
@@ -26,7 +26,7 @@
           </div>
         </div>
         <div class="row">
-          {{> render component="commentsPanel" id=state$supplierId type='supplier'}}
+          {{> commentsPanel id=state$supplierId type='supplier'}}
         </div>
       </div>
     </div>
