Fixed page heading on some views

--- a/client/lib/components/job-items/detail/view.html
+++ b/client/lib/components/job-items/detail/view.html
@@ -1,6 +1,6 @@
 <template name="jobItemDetail">
   <!-- Page heading -->
-  {{>render component="pageHeading" title=state$job.name category='Jobs' id=state$job.id name="jobitemdetailed"}}
+  {{> pageHeading title=state$job.name category='Jobs' id=state$job.id name="jobitemdetailed"}}
 
   <div class="wrapper wrapper-content animated">
     <div class="row">
