--- a/client/lib/components/menu-items/detail/view.html
+++ b/client/lib/components/menu-items/detail/view.html
@@ -1,6 +1,6 @@
 <template name="menuItemDetail">
   <!-- Page heading -->
-  {{> render component="pageHeading" title=state$menu.name category='Menus' name="menudetailed" id=state$menu._id}}
+  {{> pageHeading title=state$menu.name category='Menus' name="menudetailed" id=state$menu._id}}
 
   <div class="wrapper wrapper-content animated">
     <div class="row">
