Back date format on roster

--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/weekly-roster-day.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/weekly-roster-day.html
@@ -19,7 +19,7 @@
     </h4>
 
     {{#unless hasTemplateType}}
-      <h4>{{dateFormat currentDate}}</h4>
+      <h4>{{shiftDateFormat currentDate}}</h4>
     {{/unless}}
 
     {{#if canEditRoster}}
