--- a/client/views/app/menu-items/details/menu-item-details.html
+++ b/client/views/app/menu-items/details/menu-item-details.html
@@ -1,4 +1,4 @@
-<template name="menuItemDetail">
+<template name="menuItemDetailedMainView">
   <!-- Page heading -->
   {{> pageHeading title=state$menu.name category='Menus' name="menudetailed" id=state$menu._id}}
 
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="row">
-          
+
           <div class="col-lg-4 col-xs-12 pull-right">
             <div class="panel panel-default">
               <div class="panel-heading">
@@ -17,7 +17,7 @@
               </div>
             </div>
           </div>
-          
+
           <div class="col-lg-8 col-xs-12">
             {{> render component="menuInstructions" id=state$menu._id}}
           </div>
@@ -68,4 +68,11 @@
     </div>
   {{/if}}
   <!-- /EDIT INGREDIENT -->
+
+  <!-- SHOW LIST OF INGS AND PREPS -->
+  <div class="modal fade" id="showListOfIngs" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+       aria-hidden="true">
+    {{> render component = 'showListOfIngs'}}
+  </div>
+  <!-- /SHOW LIST OF INGS AND PREPS -->
 </template>
