Deleted redundant views, renamed ingredientItemEdit view

--- a/client/lib/components/stock/items/edit/ingredient-item-edit.html
+++ b/client/lib/components/stock/items/edit/ingredient-item-edit.html
@@ -1,4 +1,4 @@
-<template name="ingredientItemEditNoShit">
+<template name="ingredientItemEdit">
   <tr>
     <td>{{item.code}}</td>
     <td>{{item.description}}</td>
