--- a/client/views/app/job-items/ingredients-list/job-items-ingredients-list.html
+++ b/client/views/app/job-items/ingredients-list/job-items-ingredients-list.html
@@ -12,7 +12,7 @@
       </thead>
       <tbody>
       {{#each ingredients}}
-        {{> ingredientItemEditNoShit item=this onChange=onChangeStockItem}}
+        {{> ingredientItemEdit item=this onChange=onChangeStockItem}}
       {{/each}}
       </tbody>
       <br>
