--- a/client/lib/components/stock/modal_list/modal-list-no-shit/stock_item/modal-list-stock-item.html
+++ b/client/lib/components/stock/modal_list/modal-list-no-shit/stock_item/modal-list-stock-item.html
@@ -1,4 +1,4 @@
-<template name="stockModalItemNoShit">
+<template name="stockModalItem">
   <tr>
     <td>
       <div class="i-checks selected-Ing">
