--- a/client/lib/components/stocktake/counting/list/view.html
+++ b/client/lib/components/stocktake/counting/list/view.html
@@ -51,7 +51,7 @@
   <!-- STOCKS MODAL LIST-->
   <div class="modal fade" id="stocksListModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
        aria-hidden="true">
-    {{> render component = 'stocksModalList' name="stockModal"}}
+    {{> render component = 'stocksModalListComponent' name="stockModal"}}
   </div>
   <!-- /STOCKS MODAL LIST -->
 
