--- a/client/views/app/job-items/ingredients-list/job-items-ingredients-list.html
+++ b/client/views/app/job-items/ingredients-list/job-items-ingredients-list.html
@@ -30,7 +30,7 @@
   {{#if canViewStock}}
     <div class="modal fade" id="ingredientsListModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
          aria-hidden="true">
-      {{> stocksModalListNoShit name="editJob" modalStockListParams=modalStockListParams}}
+      {{> stocksModalList name="editJob" modalStockListParams=modalStockListParams}}
     </div>
   {{/if}}
   <!-- /INGREDIENTS LIST -->
