--- a/client/lib/components/menu-items/settings/view.html
+++ b/client/lib/components/menu-items/settings/view.html
@@ -100,7 +100,7 @@
     {{#if canViewStock}}
       <div class="modal fade" id="ingredientsListModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
            aria-hidden="true">
-        {{> render component = 'stocksModalList' name="editJob"}}
+        {{> render component = 'stocksModalListComponent' name="editJob"}}
       </div>
     {{/if}}
     <!-- /INGREDIENTS LIST -->
